<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="registraion">Регистрация</string>
    <string name="password_question">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Email для аутстаферов</string>
    <string name="enter_for_robots">Вход для роботов</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="email">Email</string>
    <string name="is_stuff">Пользователь является сотрудником</string>
    <string name="not_stuff">Пользователь не является\n сотрудником</string>
    <string name="fragment_authorization_email_for_outstaffer">Email для аутстаферов</string>
    <string name="fragment_authorization_incorrect_login_tv">Неверный формат логина</string>
    <string name="fragment_authorization_error">Что то пошло не так</string>
    <string name="fragment_authorization_error_server">Ошибка загрузки данных с серверера</string>
    <string name="toolbar_time_tracking">Учёт времени</string>
    <string name="instruction">Инструкция</string>
    <string name="disease">Болезнь</string>
    <string name="vacation">Отпуск</string>
    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="juny">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thusday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="hour"> ч</string>
    <string name="hours">Часы</string>
    <string name="fragment_project_list_set_time">Указать время</string>
    <string name="fragment_projects_list_description">Описание</string>
    <string name="fragment_projects_list_add_description">Добавить описание</string>
    <string name="fragment_project_list_add">Добавить</string>
    <string name="succes_writing">- задача успешно записана</string>
    <string name="ok_string">ок</string>
    <string name="time_hours_mins">%1$dч. %2$dмин.</string>
    <string name="fragment_projects_list_search">Введите название проекта</string>
    <string name="enter_pin_layout_seven">7</string>
    <string name="enter_pin_layout_eight">8</string>
    <string name="enter_pin_layout_nine">9</string>
    <string name="enter_pin_layout_zero">0</string>
    <string name="enter_pin_layout_four">4</string>
    <string name="enter_pin_layout_five">5</string>
    <string name="enter_pin_layout_six">6</string>
    <string name="enter_pin_layout_one">1</string>
    <string name="enter_pin_layout_two">2</string>
    <string name="enter_pin_layout_three">3</string>
    <string name="enter_pin_layout_enter_pin_or_finger">Введите пароль или сканируйте\nотпечаток пальца</string>
    <string name="create_pin_layout_use_finger_swotch_text">Использовать отпечаток\nпальца при входе</string>
    <string name="fragment_create_pin_save">Сохранить</string>
    <string name="fragment_enter_pin_incorrect_password">Неверный пароль</string>
    <string name="threats_founded">Найдены угрозы</string>
    <string name="problems_warning">Данные проблемы подвергают опасности ваши личные данные</string>
    <string name="enter_pin_fragment_enter_password">Введите пароль</string>
    <string name="finger_not_supported">Отпечаток пальца не поддерживается данным устройством</string>
    <string name="nter_pin_fragment_cancel">Отмена</string>
    <string name="finger_authorization">Авторизация по отпечатку пальца</string>
    <string name="enter_pin_fragment_use_fingerprint_for_auth">Используйте отпечаток пальца для авторизации</string>
    <string name="fragment_registration_name">Имя</string>
    <string name="fragment_registration_last_name">Фамилия</string>
    <string name="fragment_registration_reg_btn">Зарегестрироваться</string>
</resources>