<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">


    <Button
        android:id="@+id/seven_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/enter_pin_layout_seven"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/zero_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/eight_number_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eight_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/enter_pin_layout_eight"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/seven_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/nine_number_btn"
        app:layout_constraintStart_toEndOf="@+id/seven_number_btn" />

    <Button
        android:id="@+id/nine_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_pin_layout_nine"
        app:layout_constraintBottom_toBottomOf="@+id/eight_number_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eight_number_btn" />

    <Button
        android:id="@+id/zero_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:minWidth="100dp"
        android:text="@string/enter_pin_layout_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/four_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/enter_pin_layout_four"
        app:layout_constraintBottom_toTopOf="@+id/seven_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/five_number_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/enter_pin_layout_five"
        app:layout_constraintBottom_toBottomOf="@+id/four_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/six_number_btn"
        app:layout_constraintStart_toEndOf="@+id/four_number_btn" />

    <Button
        android:id="@+id/six_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_pin_layout_six"
        app:layout_constraintBottom_toBottomOf="@+id/five_number_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/five_number_btn" />

    <Button
        android:id="@+id/one_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/enter_pin_layout_one"
        app:layout_constraintBottom_toTopOf="@+id/four_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/two_number_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/enter_pin_layout_two"
        app:layout_constraintBottom_toBottomOf="@+id/one_number_btn"
        app:layout_constraintEnd_toStartOf="@+id/three_number_btn"
        app:layout_constraintStart_toEndOf="@+id/one_number_btn" />

    <Button
        android:id="@+id/three_number_btn"
        style="@style/PinButtonsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_pin_layout_three"
        app:layout_constraintBottom_toBottomOf="@+id/two_number_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/two_number_btn" />

    <EditText
        android:id="@+id/textView"
        style="@style/PinButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:clickable="false"
        android:enabled="false"
        android:focusable="false"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/two_number_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="5757" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_img_rmr_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/enter_pin_layout_enter_pin_or_finger"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>